# docuextract-pro

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docuextract-backend.spec  requirements.txt  sidecar_entry.py
.github/workflows/: build-release.yml  ci.yml
docs/: PRODUCT_PLAN.md  SYSTEM_REQUIREMENTS.md  TECHNICAL_ARCHITECTURE.md
samples/: README.md  sample-contract.html  sample-invoice.html
scripts/: build-mac.sh  build-windows.ps1  setup-dev.sh
src/: __init__.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/api/: __init__.py  main.py
src/core/: __init__.py  config.py  models.py  processor.py
src/license/: __init__.py  validator.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: DropZone.tsx  ErrorAlert.tsx  Header.tsx  KeyboardShortcutsModal.tsx  ProcessingCard.tsx  ProcessingHistory.tsx  ResultsViewer.tsx  StatusBar.tsx  TimeSavedBanner.tsx  WelcomeModal.tsx
ui/src/hooks/: useKeyboardShortcuts.ts  usePolling.ts
ui/src/utils/: api.ts
